@@ -1,0 +1,55 @@
+
+# This file was automatically generated by Dist::Zilla::Plugin::ModuleBuild v5.016.
+use strict;
+use warnings;
+
+use Module::Build 0.3601;
+
+
+my %module_build_args = (
+  "build_requires" => {
+    "Module::Build" => "0.3601"
+  },
+  "configure_requires" => {
+    "Module::Build" => "0.3601"
+  },
+  "dist_abstract" => "Catmandu modules for working with ArXiv data.",
+  "dist_author" => [
+    "=over"
+  ],
+  "dist_name" => "Catmandu-ArXiv",
+  "dist_version" => "0.02",
+  "license" => "perl",
+  "module_name" => "Catmandu::ArXiv",
+  "recommends" => {},
+  "recursive_test_files" => 1,
+  "requires" => {
+    "Catmandu" => 0,
+    "Catmandu::XML" => 0,
+    "Furl" => 0,
+    "Moo" => 0,
+    "perl" => "v5.10.1"
+  },
+  "script_files" => [],
+  "test_requires" => {
+    "Test::Exception" => "0.32",
+    "Test::More" => "0.88"
+  }
+);
+
+
+my %fallback_build_requires = (
+  "Module::Build" => "0.3601",
+  "Test::Exception" => "0.32",
+  "Test::More" => "0.88"
+);
+
+
+unless ( eval { Module::Build->VERSION(0.4004) } ) {
+  delete $module_build_args{test_requires};
+  $module_build_args{build_requires} = \%fallback_build_requires;
+}
+
+my $build = Module::Build->new(%module_build_args);
+
+$build->create_build_script;
