@@ -1,11 +1,10 @@
 {
    "abstract" : "Catmandu modules for working with ArXiv data.",
    "author" : [
-      "Wouter Willaert <wouterw@inuits.eu>",
-      "Vitali Peil <vitali.peil at uni-bielefeld.de>"
+      "=over"
    ],
-   "dynamic_config" : 1,
-   "generated_by" : "Module::Build version 0.4004, CPAN::Meta::Converter version 2.131560",
+   "dynamic_config" : 0,
+   "generated_by" : "Dist::Milla version v1.0.5, Dist::Zilla version 5.016, CPAN::Meta::Converter version 2.131560",
    "license" : [
       "perl_5"
    ],
@@ -14,42 +13,64 @@
       "version" : "2"
    },
    "name" : "Catmandu-ArXiv",
+   "no_index" : {
+      "directory" : [
+         "t",
+         "xt",
+         "inc",
+         "share",
+         "eg",
+         "examples"
+      ]
+   },
    "prereqs" : {
       "build" : {
          "requires" : {
-            "Software::License" : "0",
-            "Test::Exception" : "0",
-            "Test::More" : "0"
+            "Module::Build" : "0.3601"
          }
       },
       "configure" : {
          "requires" : {
-            "Module::Build" : "0.40"
+            "Module::Build" : "0.3601"
+         }
+      },
+      "develop" : {
+         "requires" : {
+            "Test::Pod" : "1.41"
          }
       },
       "runtime" : {
          "requires" : {
-            "Catmandu" : "0.7",
-            "Furl" : "2.19",
-            "XML::LibXML::Simple" : "0.93",
+            "Catmandu" : "0",
+            "Catmandu::XML" : "0",
+            "Furl" : "0",
+            "Moo" : "0",
             "perl" : "v5.10.1"
          }
-      }
-   },
-   "provides" : {
-      "Catmandu::ArXiv" : {
-         "file" : "lib/Catmandu/ArXiv.pm",
-         "version" : "0.02"
       },
-      "Catmandu::Importer::ArXiv" : {
-         "file" : "lib/Catmandu/Importer/ArXiv.pm"
+      "test" : {
+         "requires" : {
+            "Test::Exception" : "0.32",
+            "Test::More" : "0.88"
+         }
       }
    },
    "release_status" : "stable",
    "resources" : {
-      "license" : [
-         "http://dev.perl.org/licenses/"
-      ]
+      "bugtracker" : {
+         "web" : "https://github.com/LibreCat/Catmandu-ArXiv/issues"
+      },
+      "homepage" : "https://github.com/LibreCat/Catmandu-ArXiv",
+      "repository" : {
+         "type" : "git",
+         "url" : "https://github.com/LibreCat/Catmandu-ArXiv.git",
+         "web" : "https://github.com/LibreCat/Catmandu-ArXiv"
+      }
    },
-   "version" : "0.02"
+   "version" : "0.02",
+   "x_contributors" : [
+      "vpeil <vitali.peil@uni-bielefeld.de>",
+      "wouterw <wouter.willaert@gmail.com>"
+   ]
 }
+
