@@ -1,0 +1,28 @@
+# NAME
+
+Catmandu::ArXiv - Catmandu modules for working with ArXiv data.
+
+# STATUS
+
+<p>
+<a href="https://travis-ci.org/LibreCat/Catmandu-ArXiv"><img src="https://travis-ci.org/LibreCat/Catmandu-ArXiv.svg?branch=master" alt="build status" /></a>
+<a href="https://coveralls.io/repos/LibreCat/Catmandu-ArXiv/"><img src="https://coveralls.io/repos/LibreCat/Catmandu-ArXiv/badge.png?branch=master" alt="coverage status" /></a>
+<a href="http://cpants.cpanauthors.org/dist/Catmandu-ArXiv"><img src="http://cpants.cpanauthors.org/dist/Catmandu-ArXiv.png" alt="kwalitee score" /></a>
+</p>
+
+# MODULES
+
+- [Catmandu::Importer::ArXiv](https://metacpan.org/pod/Catmandu::Importer::ArXiv)
+
+# AUTHOR
+
+- Wouter Willaert
+- Vitali Peil
+
+# LICENSE AND COPYRIGHT
+
+This program is free software; you can redistribute it and/or modify it
+under the terms of either: the GNU General Public License as published
+by the Free Software Foundation; or the Artistic License.
+
+See http://dev.perl.org/licenses/ for more information.
