@@ -1,11 +1,19 @@
 requires 'perl', 'v5.10.1';
 
+on build => sub {
+    requires 'Module::Build', '0.3601';
+};
+
+on configure => sub {
+    requires 'Module::Build', '0.3601';
+};
+
 on test => sub {
     requires 'Test::More', '0.88';
     requires 'Test::Exception', '0.32';
 };
 
-requires 'Catmandu', '>=0.8008';
-requires 'Moo', '>= 1.004';
-requires 'Furl', '>= 3.0;
-requires 'XML::LibXML::Simple', '>= 0.9';
+requires 'Catmandu';
+requires 'Moo';
+requires 'Furl';
+requires 'Catmandu::XML';
