@@ -1,2 +1,2 @@
 [@Milla]
-
+installer = ModuleBuild
