@@ -1,5 +1,9 @@
 Revision history for Catmandu-ArXiv
 
+{{$NEXT}}
+	- switch to Dist::Milla as build tool
+	- tests modified
+
 0.02 	2013-09-10
 	- travis, coveralls, kwalitee
 	- Build.PL updated to newer versions
